--- a/src/index.css
+++ b/src/index.css
@@ -6,30 +6,30 @@ Variables
 
 :root {
   /* dark shades of primary color*/
-  --clr-primary-1: hsl(22, 28%, 21%);
-  --clr-primary-2: hsl(22, 28%, 29%);
-  --clr-primary-3: hsl(22, 28%, 37%);
-  --clr-primary-4: hsl(22, 28%, 45%);
+  --clr-primary-1: #082f49;
+  --clr-primary-2: #082f49;
+  --clr-primary-3: #075985;
+  --clr-primary-4: #0369a1;
   /* primary/main color */
-  --clr-primary-5: hsl(22, 31%, 52%);
+  --clr-primary-5: #0369a1;
   /* lighter shades of primary color */
-  --clr-primary-6: hsl(22, 31%, 60%);
-  --clr-primary-7: hsl(22, 31%, 67%);
-  --clr-primary-8: hsl(20, 31%, 74%);
-  --clr-primary-9: hsl(22, 31%, 81%);
-  --clr-primary-10: hsl(22, 31%, 88%);
+  --clr-primary-6: #0ea5e9;
+  --clr-primary-7: #38bdf8;
+  --clr-primary-8: #7dd3fc;
+  --clr-primary-9: #bae6fd;
+  --clr-primary-10: #e0f2fe;
   /* darkest grey - used for headings */
-  --clr-grey-1: hsl(209, 61%, 16%);
-  --clr-grey-2: hsl(211, 39%, 23%);
-  --clr-grey-3: hsl(209, 34%, 30%);
-  --clr-grey-4: hsl(209, 28%, 39%);
+  --clr-grey-1: #1c1917;
+  --clr-grey-2: #292524;
+  --clr-grey-3: #44403c;
+  --clr-grey-4: #57534e;
   /* grey used for paragraphs */
-  --clr-grey-5: hsl(210, 22%, 49%);
-  --clr-grey-6: hsl(209, 23%, 60%);
-  --clr-grey-7: hsl(211, 27%, 70%);
-  --clr-grey-8: hsl(210, 31%, 80%);
-  --clr-grey-9: hsl(212, 33%, 89%);
-  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-grey-5: #78716c;
+  --clr-grey-6: #a8a29e;
+  --clr-grey-7: #d6d3d1;
+  --clr-grey-8: #e7e5e4;
+  --clr-grey-9: #f5f5f4;
+  --clr-grey-10: #fafaf9;
   --clr-white: #fff;
   --clr-red-dark: hsl(360, 67%, 44%);
   --clr-red-light: hsl(360, 71%, 66%);
@@ -58,8 +58,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Supreme', sans-serif;
   background: var(--clr-white);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -80,6 +79,7 @@ h2,
 h3,
 h4,
 h5 {
+  font-family: 'Recia', serif;
   letter-spacing: var(--spacing);
   text-transform: capitalize;
   line-height: 1.25;
@@ -104,6 +104,7 @@ p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-3);
 }
+
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 3rem;
@@ -122,12 +123,6 @@ p {
   }
   body {
     font-size: 1rem;
-  }
-  h1,
-  h2,
-  h3,
-  h4 {
-    line-height: 1;
   }
 }
 /*  global classes */
