--- a/src/index.css
+++ b/src/index.css
@@ -176,6 +176,9 @@ p {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: var(--radius);
   border-color: transparent;
+  text-align: center;
+  line-height: 1;
+  padding: 10px;
 }
 .btn:hover {
   color: var(--clr-primary-1);
