--- a/src/index.css
+++ b/src/index.css
@@ -193,8 +193,21 @@ p {
 }
 
 .btn.light {
-  background: #fff;
-  color: #000;
+  color: var(--clr-primary-1);
+  background: var(--clr-primary-7);
+  display: block;
+  width: auto;
+  margin: 0px auto;
+  text-align: center;
+  padding: 2rem;
+  font-size: 2rem;
+  font-weight: bold;
+  border: 4px solid var(--clr-primary-7);
+}
+
+.btn.light:hover {
+  background: transparent;
+  color: var(--clr-primary-7);
 }
 
 .btn:hover {
