--- a/src/index.css
+++ b/src/index.css
@@ -254,3 +254,8 @@ section.sc-hzhJZQ.guhiTb span.product-item {
 .modal-background.active {
   display: block;
 }
+
+.slick-slider {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
